<resources>
    <string name="app_name">Wannajob</string>
    <string name="facebook_app_id" translatable="false">1704723056477453</string>
    <string name="title_activity_main" translatable="false">Wannajob</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_create_job">Create Job</string>
    <string name="nav_bid">My Bids</string>
    <string name="nav_favorites_option">Favorites</string>
    <string name="nav_discovery_preferences_option">Discovery preferences</string>
    <string name="nav_share_option">Share Wannajob</string>
    <string name="nav_categories">Categories</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="want_to_cancel_job_dialog">Do you want to cancel this job?</string>
    <string name="want_to_save_changes_dialog">Do you want to save the changes?</string>
    <string name="job_added_to_favorite">job has been added to your favorite list</string>
    <string name="job_removed_to_favorite">job has been removed from your favorite list</string>

    <string-array name="categories_list">
        <item>0 Manitas, Reparaciones y Obras</item>
        <item>1 Transportes/envíos</item>
        <item>2 Tecnología</item>
        <item>3 Clases</item>
        <item>4 Servicisos Domésticos</item>
        <item>5 Cocina</item>
        <item>6 Ayuda en General</item>
        <item>7 Otros</item>
    </string-array>


    <string name="job_description">Job description</string>
    <string name="job_name">Job name</string>
    <string name="job_location">Job location</string>
    <string name="job_salary">Salary</string>
    <string name="job_duration">Duration</string>
    <string name="job_location_button">Change Job Location</string>
    <string name="job_distance">Job distance: </string>
    <string name="use_my_location">Use my location</string>
    <string name="job_category">CHOOSE A CATEGORY</string>
    <string name="data_wrong_dialog">Some of the data is wrong. Check it again.</string>
    <string name="job_created_dialog">Your job has been created</string>
    <string name="job_modified_dialog">Your job has been modified</string>
    <string name="send_message_button">ASK ME</string>

    <string name="output_category">Category</string>
    <string name="modify_discovery_pref_message">There are not users around you. Change your discovery preferences and try again.</string>
    <string name="sort_by_distance">Sort By Distance</string>
    <string name="sort_by_salary">Sort By Salary</string>
    <string name="search_key_word">Search Key Words</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="view_on_map">View Job Map</string>


    <string name="save_changes">Save Changes</string>
    <string name="enter_location">Enter a location</string>

    <string name="from_you"> from you.</string>
    <string name="you_find_jobs_own_location">You will find users in your own location and around</string>
    <string name="you_find_encounters">You will find users in</string>
    <string name="and_around"> and around </string>
    <string name="edit_profile_here">Edit your profile</string>
    <string name="show_job_activity_edit_job">Edit Job</string>
    <string name="activity_evaluate_user_evaluation_button_text">Evaluate your Wannajober</string>
    <string name="no_dialog">No</string>
    <string name="yes_dialog">Yes</string>
    <string name="exit_without_saving">Do you want to exit without saving the changes?</string>
    <string name="from_camera">From camera</string>
    <string name="from_sdcard">From SD card</string>
    <string name="select_image">Select Image</string>
    <string name="dialog_complete_action_using">Complete action using</string>

    <string name="dialog_download_this_app">Download this application and discover users around you!!</string>
    <string name="choose_option_share">Choose an application to share Wannajob</string>
    <string name="your_bid">Your Bid: </string>
    <string name="manitas_category">Manitas, Reparaciones y Obras</string>

    <string name="create_job">Create Job</string>
    <string name="share_wannajob_message">\n Download this application and discover users around you!!\n\n</string>
    <string name="choose_app_share_wannajob_message">Choose an application to share Wannajob</string>
    <string name="title_activity_show_job_map">Map</string>
    <string name="request_job_text_button">BET FOR THIS JOB</string>

    <string name="edit_profile_text">EDIT PROFILE</string>
    <string name="age_text">Age</string>
    <string name="name_text">Name</string>
    <string name="description_text">Description</string>

    <string name="evaluation_text_stars">How many stars does your Wannajober deserve?</string>
    <string name="evaluation_text">Can you do a recommendation about your Wannajober?</string>
    <string name="evaluation_text_hint">Service quality, puntuality and other aspects?</string>

    <string name="user_adapter_dialog">Do you want to accept</string>
    <string name="user_adapter_dialog2">to do your job?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="eliminate_job">Eliminate Job</string>
    <string name="eliminate_job_dialog">Are you sure you want to remove this job?</string>

    <string name="job_match_title">YOU HAVE BEEN CHOSEN</string>
    <string name="be_on_time">Be on time</string>
    <string name="send_message_or_call">Send a message or call</string>
    <string name="dont_forget_evaluate_wannajober">Do not forget to evaluate your Wannajober</string>
    <string name="evaluate_button">EVALUATE</string>
    <string name="want_to_send_this_evaluation">Do you want to send this evaluation to your wannajober?</string>

</resources>
