<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_job"
            android:icon="@drawable/ic_create_job_black_24dp"
            android:title="@string/nav_create_job"/>
        <item
            android:id="@+id/nav_my_bids"
            android:icon="@drawable/ic_done_black_24dp"
            android:title="@string/nav_bid"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/nav_favorites_option"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_view_category_24dp"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_discovery_preferences_option" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share_option" />
    </group>

</menu>
