<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:id="@+id/l2"
    android:layout_weight="1"
    tools:context=".activities.CreateJobActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="100dp">
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:drawable/ic_menu_slideshow"
            android:id="@+id/job_photo_button" />
    </RelativeLayout>


        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:id="@+id/input_job_name">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/job_name" />
        </android.support.design.widget.TextInputLayout>

            <!-- Description Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:id="@+id/input_job_description">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/job_description" />
            </android.support.design.widget.TextInputLayout>

            <!-- Salary Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:id="@+id/input_job_salary">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/job_salary" />
            </android.support.design.widget.TextInputLayout>

            <!-- Duration Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/input_job_duration">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/job_duration" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_categories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@android:color/transparent"
                android:padding="6dp"
                android:text="@string/job_category"
                android:gravity="start" />

</LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Create Job Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createJobButton"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_weight="1"

            android:orientation="vertical"
            android:text="@string/create_job"
            android:layout_gravity="bottom"
            android:background="@color/colorGreen"
            android:textColor="#fcfcfc" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>