<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreenTransparent"
    android:windowBackground="@color/transparent"
    android:theme="@android:style/Theme.Translucent.NoTitleBar"
    tools:context="com.example.txuso.wannajob.activities.JobMatchActivity">

    <TextView
        android:textSize="30dp"
        android:background="#00000000"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_match_title"
        android:textColor="@color/colorWhite"
        android:id="@+id/activity_job_match_title" />

    <ImageView
        android:background="#00000000"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/activity_job_match_calendar_image"
        android:src="@drawable/calendar"
        android:layout_marginTop="56dp"

        android:layout_below="@+id/activity_job_match_title"
        android:layout_alignLeft="@+id/activity_job_match_title"
        android:layout_alignStart="@+id/activity_job_match_title" />

    <TextView
        android:textSize="20dp"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/be_on_time"
        android:textColor="@color/colorWhite"
        android:id="@+id/activity_job_match_calendar_text"
        android:layout_alignTop="@+id/activity_job_match_calendar_image"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:background="#00000000"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/activity_job_match_call_image"
        android:src="@drawable/ic_call_24dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/activity_job_match_calendar_image"
        android:layout_alignStart="@+id/activity_job_match_calendar_image" />
    <TextView
        android:textSize="20dp"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message_or_call"
        android:textColor="@color/colorWhite"
        android:id="@+id/activity_job_match_call_text"
        android:layout_alignTop="@+id/activity_job_match_call_image"
        android:layout_alignLeft="@+id/activity_job_match_calendar_text"
        android:layout_alignStart="@+id/activity_job_match_calendar_text" />


    <ImageView
        android:background="#00000000"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/activity_job_match_evaluate_image"
        android:src="@drawable/evaluate_eye"
        android:layout_below="@+id/activity_job_match_call_image"
        android:layout_alignLeft="@+id/activity_job_match_call_image"
        android:layout_alignStart="@+id/activity_job_match_call_image"
        android:layout_marginTop="108dp" />

    <TextView
        android:textSize="20dp"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/dont_forget_evaluate_wannajober"
        android:textColor="@color/colorWhite"
        android:id="@+id/activity_job_match_evaluate_text"
        android:layout_alignTop="@+id/activity_job_match_evaluate_image"
        android:layout_alignLeft="@+id/activity_job_match_call_text"
        android:layout_alignStart="@+id/activity_job_match_call_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/evaluate_button"
        android:textSize="25dp"
        android:id="@+id/activity_job_match_evaluate_button"
        android:textColor="@color/colorGreen"
        android:background="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
