<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.txuso.wannajob.activities.EvaluateUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/share_main_instagram"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_rectangle_evaluation"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/evaluation_text_stars"
                android:textColor="@color/colorGreen"
                android:layout_gravity="center"
                android:textSize="16sp"
                />

            <RatingBar
                android:id="@+id/activity_show_job_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressTint="@color/colorGreen"
                android:layout_gravity="center"
                android:stepSize="1.0"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGreen"
            />

        <LinearLayout
            android:id="@+id/share_main_gallery"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_rectangle_evaluation"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/evaluation_text"
                android:textColor="@color/colorGreen"
                android:textSize="16sp"
                />

            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_height="wrap_content"
                android:id="@+id/activity_evaluate_user_input_job_evaluation">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:hint="@string/evaluation_text_hint" />
                </ScrollView>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
